WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139923
[Mac] Fix nullptr dereference in EventHandler::platformPrepareForWheelEvents().
https://bugs.webkit.org/show_bug.cgi?id=139923
Summary
[Mac] Fix nullptr dereference in EventHandler::platformPrepareForWheelEvents().
Andreas Kling
Reported
2014-12-23 15:58:33 PST
<
rdar://problem/19182531
>
Attachments
Patch
(2.78 KB, patch)
2014-12-23 16:05 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-12-23 16:05:53 PST
Created
attachment 243709
[details]
Patch
Chris Dumez
Comment 2
2014-12-23 16:11:33 PST
Comment on
attachment 243709
[details]
Patch r=me.
Andreas Kling
Comment 3
2014-12-23 16:31:32 PST
Comment on
attachment 243709
[details]
Patch Thanks Chris!
WebKit Commit Bot
Comment 4
2014-12-23 17:11:24 PST
Comment on
attachment 243709
[details]
Patch Clearing flags on attachment: 243709 Committed
r177711
: <
http://trac.webkit.org/changeset/177711
>
WebKit Commit Bot
Comment 5
2014-12-23 17:11:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug