[Mac] Fix nullptr dereference in EventHandler::platformPrepareForWheelEvents(). <https://webkit.org/b/139923> <rdar://problem/19182531>

Reviewed by Chris Dumez.

Don't dereference 'wheelEventTarget' until we know it's non-null.
This manifested as a crash in Node::renderBox() with some versions of LLVM.

The compiler was free to assume that the ContainerNode* 'candidate' in
findEnclosingScrollableContainer() would always be non-null on the first
iteration of the loop.

I suspect that we can get here with a null 'wheelEventTarget' during the
rubberbanding phase of a wheel scroll; if the cursor is sitting over the
exposed "gutter" area.

* page/mac/EventHandlerMac.mm:
(WebCore::findEnclosingScrollableContainer):
(WebCore::EventHandler::platformPrepareForWheelEvents):


Canonical link: https://commits.webkit.org/157869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177711 268f45cc-cd09-0410-ab3c-d52691b4dbfc